--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,11 @@ code, pre {
     margin: 0 10px;
 }
 
+.footer {
+    margin-top: 10px;
+    margin-bottom: 0 !important;
+}
+
 /*Animations*/
 @keyframes slideInFromLeft {
     0% {
